@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 import com.databricks.jdbc.api.internal.IDatabricksConnectionContext;
-import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -19,7 +18,7 @@ public class VolumeRetryUtilTest {
   public void testIsRetryableHttpCode_WithConnectionContext() {
     // Setup mock connection context
     when(mockConnectionContext.getUCIngestionRetriableHttpCodes())
-        .thenReturn(List.of(408, 429, 500, 502, 503, 504));
+        .thenReturn(java.util.Arrays.asList(408, 429, 500, 502, 503, 504));
 
     // Test retryable codes
     assertTrue(VolumeRetryUtil.isRetryableHttpCode(408, mockConnectionContext));
@@ -43,7 +42,7 @@ public class VolumeRetryUtilTest {
   public void testIsRetryableHttpCode_CustomRetryableCodes() {
     // Test with custom retryable codes
     when(mockConnectionContext.getUCIngestionRetriableHttpCodes())
-        .thenReturn(List.of(503, 504, 507)); // Custom list
+        .thenReturn(java.util.Arrays.asList(503, 504, 507)); // Custom list
 
     assertTrue(VolumeRetryUtil.isRetryableHttpCode(503, mockConnectionContext));
     assertTrue(VolumeRetryUtil.isRetryableHttpCode(504, mockConnectionContext));
@@ -95,7 +94,7 @@ public class VolumeRetryUtilTest {
   public void testIntegration_RetryScenario() {
     // Integration test simulating a real retry scenario
     when(mockConnectionContext.getUCIngestionRetriableHttpCodes())
-        .thenReturn(List.of(500, 502, 503, 504));
+        .thenReturn(java.util.Arrays.asList(500, 502, 503, 504));
     when(mockConnectionContext.getUCIngestionRetryTimeoutSeconds()).thenReturn(60);
 
     long startTime = System.currentTimeMillis();
@@ -117,7 +116,7 @@ public class VolumeRetryUtilTest {
   @Test
   public void testIntegration_TimeoutScenario() {
     when(mockConnectionContext.getUCIngestionRetriableHttpCodes())
-        .thenReturn(List.of(500, 502, 503, 504));
+        .thenReturn(java.util.Arrays.asList(500, 502, 503, 504));
     when(mockConnectionContext.getUCIngestionRetryTimeoutSeconds()).thenReturn(2); // 2 seconds
 
     // Start time 3 seconds ago (exceeds timeout)
