@@ -12,7 +12,6 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.math.BigInteger;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.security.*;
 import java.security.cert.CertificateException;
 import java.security.cert.TrustAnchor;
@@ -151,22 +150,22 @@ public class ConfiguratorUtilsTest {
   @AfterAll
   static void cleanup() {
     try {
-      Files.delete(Path.of(EMPTY_TRUST_STORE_PATH));
+      Files.delete(java.nio.file.Paths.get(EMPTY_TRUST_STORE_PATH));
     } catch (IOException e) {
       LOGGER.info("Failed to delete empty trust store file: " + e.getMessage());
     }
     try {
-      Files.delete(Path.of(DUMMY_TRUST_STORE_PATH));
+      Files.delete(java.nio.file.Paths.get(DUMMY_TRUST_STORE_PATH));
     } catch (IOException e) {
       LOGGER.info("Failed to delete dummy trust store file: " + e.getMessage());
     }
     try {
-      Files.delete(Path.of(EMPTY_KEY_STORE_PATH));
+      Files.delete(java.nio.file.Paths.get(EMPTY_KEY_STORE_PATH));
     } catch (IOException e) {
       LOGGER.info("Failed to delete empty key store file: " + e.getMessage());
     }
     try {
-      Files.delete(Path.of(DUMMY_KEY_STORE_PATH));
+      Files.delete(java.nio.file.Paths.get(DUMMY_KEY_STORE_PATH));
     } catch (IOException e) {
       LOGGER.info("Failed to delete dummy key store file: " + e.getMessage());
     }
