@@ -205,18 +205,27 @@ public class MetadataResultSetBuilderTest {
 
   private static Stream<Arguments> provideSpecialColumnsArguments() {
     return Stream.of(
-        Arguments.of(List.of("INTEGER", "", "", 0, ""), Arrays.asList("INTEGER", 4, null, 1, null)),
-        Arguments.of(List.of("DATE", "", "", 1, ""), Arrays.asList("DATE", 91, 91, 2, null)));
+        Arguments.of(
+            java.util.Arrays.asList("INTEGER", "", "", 0, ""),
+            Arrays.asList("INTEGER", 4, null, 1, null)),
+        Arguments.of(
+            java.util.Arrays.asList("DATE", "", "", 1, ""),
+            Arrays.asList("DATE", 91, 91, 2, null)));
   }
 
   private static Stream<Arguments> provideColumnSizeArguments() {
     return Stream.of(
-        Arguments.of(List.of("VARCHAR(50)", 0, 0), List.of("VARCHAR", 50, 0)),
-        Arguments.of(List.of("INT", 4, 10), List.of("INT", 10, 10)));
+        Arguments.of(
+            java.util.Arrays.asList("VARCHAR(50)", 0, 0),
+            java.util.Arrays.asList("VARCHAR", 50, 0)),
+        Arguments.of(
+            java.util.Arrays.asList("INT", 4, 10), java.util.Arrays.asList("INT", 10, 10)));
   }
 
   private static Stream<Arguments> provideColumnSizeArgumentsVarchar() {
-    return Stream.of(Arguments.of(List.of("VARCHAR", 0, 0), List.of("VARCHAR", 255, 0)));
+    return Stream.of(
+        Arguments.of(
+            java.util.Arrays.asList("VARCHAR", 0, 0), java.util.Arrays.asList("VARCHAR", 255, 0)));
   }
 
   @ParameterizedTest
@@ -300,9 +309,9 @@ public class MetadataResultSetBuilderTest {
 
   @Test
   void testGetThriftRowsWithRowIndexOutOfBounds() {
-    List<ResultColumn> columns = List.of(COLUMN_TYPE_COLUMN, COL_NAME_COLUMN);
-    List<Object> row = List.of("VARCHAR(50)");
-    List<List<Object>> rows = List.of(row);
+    List<ResultColumn> columns = java.util.Arrays.asList(COLUMN_TYPE_COLUMN, COL_NAME_COLUMN);
+    List<Object> row = java.util.Arrays.asList("VARCHAR(50)");
+    List<List<Object>> rows = java.util.Arrays.asList(row);
 
     List<List<Object>> updatedRows = metadataResultSetBuilder.getThriftRows(rows, columns);
     List<Object> updatedRow = updatedRows.get(0);
@@ -314,14 +323,15 @@ public class MetadataResultSetBuilderTest {
   @MethodSource("provideSpecialColumnsArguments")
   void testGetThriftRowsSpecialColumns(List<Object> row, List<Object> expectedRow) {
     List<ResultColumn> columns =
-        List.of(
+        java.util.Arrays.asList(
             COLUMN_TYPE_COLUMN,
             SQL_DATA_TYPE_COLUMN,
             SQL_DATETIME_SUB_COLUMN,
             ORDINAL_POSITION_COLUMN,
             SCOPE_CATALOG_COLUMN);
 
-    List<List<Object>> updatedRows = metadataResultSetBuilder.getThriftRows(List.of(row), columns);
+    List<List<Object>> updatedRows =
+        metadataResultSetBuilder.getThriftRows(java.util.Arrays.asList(row), columns);
     List<Object> updatedRow = updatedRows.get(0);
     // verify following
     // 1. ordinal position is 1, 2
@@ -338,9 +348,10 @@ public class MetadataResultSetBuilderTest {
   @MethodSource("provideColumnSizeArguments")
   void testGetThriftRowsColumnSize(List<Object> row, List<Object> expectedRow) {
     List<ResultColumn> columns =
-        List.of(COLUMN_TYPE_COLUMN, COLUMN_SIZE_COLUMN, NUM_PREC_RADIX_COLUMN);
+        java.util.Arrays.asList(COLUMN_TYPE_COLUMN, COLUMN_SIZE_COLUMN, NUM_PREC_RADIX_COLUMN);
 
-    List<List<Object>> updatedRows = metadataResultSetBuilder.getThriftRows(List.of(row), columns);
+    List<List<Object>> updatedRows =
+        metadataResultSetBuilder.getThriftRows(java.util.Arrays.asList(row), columns);
     List<Object> updatedRow = updatedRows.get(0);
 
     assertEquals(expectedRow.get(0), updatedRow.get(0));
@@ -354,9 +365,10 @@ public class MetadataResultSetBuilderTest {
     when(context.getDefaultStringColumnLength()).thenReturn(255);
     MetadataResultSetBuilder metadataResultSetBuilder = new MetadataResultSetBuilder(context);
     List<ResultColumn> columns =
-        List.of(COLUMN_TYPE_COLUMN, COLUMN_SIZE_COLUMN, NUM_PREC_RADIX_COLUMN);
+        java.util.Arrays.asList(COLUMN_TYPE_COLUMN, COLUMN_SIZE_COLUMN, NUM_PREC_RADIX_COLUMN);
 
-    List<List<Object>> updatedRows = metadataResultSetBuilder.getThriftRows(List.of(row), columns);
+    List<List<Object>> updatedRows =
+        metadataResultSetBuilder.getThriftRows(java.util.Arrays.asList(row), columns);
     List<Object> updatedRow = updatedRows.get(0);
 
     assertEquals(expectedRow.get(0), updatedRow.get(0));
